roles/jenkins/files/deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"name":"jenkins-actual","namespace":"default"},"spec":{"replicas":1,"template":{"metadata":{"labels":{"app":"jenkins"}},"spec":{"containers":[{"image":"jenkins/jenkins","name":"jenkins-actual","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: 2018-11-20T19:23:57Z
  generation: 1
  labels:
    app: jenkins
  name: jenkins-actual
  namespace: default
  resourceVersion: "7097"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/jenkins-actual
  uid: d397f3dc-ecf9-11e8-bd58-f23c912114e0
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins
    spec:
      containers:
      - image: jenkins/jenkins
        imagePullPolicy: Always
        name: jenkins-actual
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-11-20T19:23:58Z
    lastUpdateTime: 2018-11-20T19:23:58Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
...
